--- a/package.json
+++ b/package.json
@@ -25,7 +25,9 @@
     "next": "15.3.4",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-slick": "^0.30.3",
     "react-tsparticles": "^2.12.2",
+    "slick-carousel": "^1.8.1",
     "tailwind-merge": "^3.3.1",
     "tsparticles": "^3.9.0",
     "tsparticles-engine": "^2.12.0"
@@ -37,6 +39,7 @@
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "@types/react-slick": "^0.23.13",
     "eslint": "^9",
     "eslint-config-next": "15.3.4",
     "tailwindcss": "^4",
